add ability to add User to database

--- a/Booking/conf/app.conf
+++ b/Booking/conf/app.conf
@@ -212,6 +212,12 @@ log.error.flags = 19
 log.request.output = stderr
 
 
+db.user = booker
+db.password = testpassword
+db.host = localhost
+db.port = 3306
+db.name = booking
+
 
 ################################################################################
 # Section: prod
